Format the code; Use valueOf(String) instead of the deprecated Long(String)